# deep_engine

./: .gitignore  Cargo.toml
ecs/: Cargo.toml
ecs/benches/: sparse_bench.rs
ecs/src/: component.rs  entity.rs  id.rs  lib.rs  registry.rs  sparse.rs  store.rs  table.rs  world.rs
ecs/src/util/: aligned_buf.rs  itertools.rs  mod.rs  scopeguard.rs  spmc_atomic_queue.rs
src/: main.rs
